--- a/static/sass/_footer.sass
+++ b/static/sass/_footer.sass
@@ -42,12 +42,6 @@
     display: inline-block
     background-position-x: 75%
 
-@media (max-width: 575px)
-  .footer-top-phones
-    text-align: center !important
-    order: 2
-  .footer-social
-    flex-direction: column
 .vk_icon
   background: url(../img/icons/social.jpg)
   background-position-x: 75%
@@ -58,3 +52,29 @@
 .inst_icon
   background: url(../img/icons/social.jpg)
   background-position-x: 75%
+
+@media (max-width: 1024px)
+  .footer-top.grid-col4
+    grid-template-columns: repeat(3, 1fr)
+
+
+@media (max-width: 768px)
+  .footer-top-info
+    grid-column: span 2
+    text-align: center
+  .footer-top-phones
+    grid-column: span 2
+    text-align: center !important
+
+@media (max-width: 575px)
+  .footer-top.grid-col4
+    grid-template-columns: repeat(1, 1fr)
+  .footer-top-phones
+    text-align: center !important
+    order: 2
+  .footer-social
+    flex-direction: column
+
+
+
+
