--- a/templates/login_modal.html
+++ b/templates/login_modal.html
@@ -12,7 +12,7 @@
                         <div class="login-form-login-tab mt10">
                             <div class="form-filed-wrapper mb10">
                                 <label >Телефон </label>
-                                <input id="login-phone" class="form-control" value="" placeholder="79991112233">
+                                <input id="login-phone" type="number" minlength="11"  maxlength="11" class="form-control" value="" placeholder="79991112233">
                             </div>
                             <div class="form-filed-wrapper mb10">
                                 <label>Пароль </label>
@@ -24,7 +24,7 @@
                         <div class="login-form-register-tab mt10">
                             <div class="form-filed-wrapper mb10">
                                 <label >Телефон</label>
-                                <input id="reg_phone"  class="form-control" value="" placeholder="В формате: 79991112233">
+                                <input id="reg_phone" type="number" minlength="11"  maxlength="11" class="form-control" value="" placeholder="В формате: 79991112233">
                             </div>
                             <div class="form-filed-wrapper mb10">
                                 <label >E-Mail</label>
